# mm-ragbench

./: DATASET_CARD.md  README.md  pyproject.toml
examples/: evaluate_with_mmeval_vrag.py
mm_ragbench/: __init__.py  builder.py  loader.py
tests/: test_integration.py
